force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/leaseworks__Deal_Term_Asset__c.object-meta.xml
<CustomObject>
    <label>Y_Hidden Economic Analysis Revision</label>
    <nameField>
        <label>Economic Analysis Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Economic Analysis Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>