force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Additional_Rent_due_to_NVA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Additional_Rent_due_to_NVA__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__NVA_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Rent due to NVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>