force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Date_of_Analysis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Analysis__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Date_of_Analysis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date on which pricing team completed the analysis request and updated the terms</inlineHelpText>
    <label>Analysis Completion Date</label>
    <type>Date</type>
</CustomField>