force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Date_Of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Manufacture__c</fullName>
    <formula>leaseworks__Asset_Term__r.leaseworks__Date_of_Manufacture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Manufacture</label>
    <type>Date</type>
</CustomField>