force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Engine_LLP_per_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_LLP_per_Cycle__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Engine_LLP_per_Cycle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual reserve rate for Engine 1 LLP as per marketing rep</inlineHelpText>
    <label>Engine LLP per Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>