force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Estimated_Transition_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Estimated_Transition_Cost__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Estimated_Transition_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Transition Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>