force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__IRR_with_MR_and_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR_with_MR_and_Security_Deposit__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__IRR_with_MR_and_Security_Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRR with MR and Security Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>