force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Landing_Gear_per_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Landing_Gear_per_Month__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Landing_Gear_per_mos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual reserve rate for Landing Gear as per marketing rep</inlineHelpText>
    <label>Landing Gear per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>