force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Lease_Rate_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Rate_Factor__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Lease_Rate_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lease Rate Factor entered by marketing rep</inlineHelpText>
    <label>Lease Rate Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>