force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__MR_Base_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Base_Year__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__MR_Base_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Base Year</label>
    <type>Text</type>
</CustomField>