force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__NBV_at_Lease_Maturity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NBV_at_Lease_Maturity__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__NBV_at_Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBV at Lease Maturity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>