force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Per_BP_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Per_BP_Adjustment__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Per_BP_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per BP Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>