force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Price_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Price_As_of_Date__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Price_As_of_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date for which Purchase price entered is applicable</inlineHelpText>
    <label>Price As of Date</label>
    <type>Date</type>
</CustomField>