force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Pricing_Run__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pricing_Run__c</fullName>
    <label>Economic Analysis Revision Request</label>
    <referenceTo>leaseworks__Deal_Terms_Revision__c</referenceTo>
    <relationshipLabel>Economic Analysis Revisions</relationshipLabel>
    <relationshipName>Economic_Analysis_Revisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>