force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Purchase_Price_Ex_NVA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price_Ex_NVA__c</fullName>
    <formula>leaseworks__Pricing_Run__r.leaseworks__Purchase_Price_Ex_NVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price (Ex. NVA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>