force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/fields/leaseworks__Total_Escalated_Rent_Inc_NVA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Escalated_Rent_Inc_NVA__c</fullName>
    <formula>leaseworks__Escalated_Rent__c  +   leaseworks__Additional_Rent_due_to_NVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Escalated rent and Additional rent due to NVA</inlineHelpText>
    <label>Total Escalated Rent Inc NVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>