force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/recordTypes/leaseworks__Campaign.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Campaign</fullName>
    <active>false</active>
    <label>Campaign</label>
</RecordType>