force-app/main/default/objects/leaseworks__Deal_Term_Asset__c/recordTypes/leaseworks__Marketing_Activity.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Marketing_Activity</fullName>
    <active>true</active>
    <label>Deal</label>
</RecordType>